Fix nav alignment at smallest screen sizes

--- a/styles/4_css-responsive.css
+++ b/styles/4_css-responsive.css
@@ -266,7 +266,7 @@
   /* header */
   #logo { margin-left: 15px; }
   #logo img { width: 23px; height: 35px;}
-  nav .pos { width: 100%; font-size: 19px; }
+  nav .pos { width: 380px; font-size: 19px; }
   nav ul li { margin-left: 12px; line-height: 55px;}
   #header, nav, nav ul, nav ul li { height: 50px;}
   #header nav .right { margin-left: 0; margin-right: 30px;}
